examples/v0.1/errors/type_mismatch.nova
name: S = "Varun"

name = 100

// Expected: Datatype mismatch.